Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignBoolObjUndefined.quorum
class Main
    action Main
        Boolean v = Test()
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Boolean
        return undefined
    end
end