Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerIntObj.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        Integer var
        var:SetValue(5)
        return var
    end
end